# ROOM

./: .gdbinit  .gitignore  .gitmodules  CMakeLists.txt  Pipfile  build.py  conanfile.txt  pyproject.toml  sim.py
bootrom/: Makefile
config/groom/: default.json
debug_rom/: Makefile  debug_rom.S  linker.ld
docker/: Dockerfile  amaranth.patch  requirements.txt
groom/: __init__.py  core.py  csr.py  csrnames.py  ctrl.py  dispatch.py  ex_stage.py  fp_pipeline.py  fu.py  id_stage.py  if_stage.py  issue.py  lsu.py  raster.py  regfile.py  wrapper.py
groom_runtime/: Makefile  linker.ld  spawn.c  start.S
include/groom/: csr.h  intrinsics.h  spawn.h
room/: __init__.py  alu.py  alu_test.py  bpd.py  branch.py  breakpoint.py  consts.py  core.py  csr.py  dcache.py  debug.py  dispatch.py  ex_stage.py  exc.py  fifo.py  fp_pipeline.py  fpu.py  fpu_test.py  fu.py  icache.py  id_stage.py  if_stage.py  interface.py  issue.py  jtag.py  lsu.py  lsu_test.py  mmu.py  pmp.py  regfile.py  rename.py  rob.py  rvc.py  rvc_test.py  test.py  tlb.py  types.py  utils.py  utils_test.py  wrapper.py  (+1 more)
roomsoc/: peripheral.py  soc.py
roomsoc/cpu/minerva/: __init__.py  core.py
roomsoc/cpu/picorv32/: __init__.py  core.py
roomsoc/cpu/serv/: __init__.py  core.py
roomsoc/interconnect/: ahb.py  apb.py  csr.py  stream.py  tilelink.py  wishbone.py
roomsoc/interconnect/axi/: __init__.py  axi_full.py  axi_full_to_tl.py  axi_lite.py  axi_stream.py  common.py
roomsoc/peripheral/: __init__.py  clint.py  debug.py  dma.py  event.py  jtag.py  l2cache.py  peripheral.py  plic.py  sdc.py  uart.py  video.py
roomsoc/peripheral/net/: __init__.py  arp.py  common.py  crc.py  ethernet.py  infiniband.py  ip.py  ipv4.py  roce.py  udp.py
roomsoc/peripheral/ram/: __init__.py  sdram.py
roomsoc/peripheral/spi/: __init__.py  spi_master.py
roomsoc/peripheral/usb/: __init__.py  ohci.py  phy.py  usb.py
roomsoc/platform/: kc705.py  lattice.py  xilinx.py
rtl/: JTAGTUNNEL.v  debug_console.v  dromajo_ram.v  vl_trace_if.v.tmpl
rtl/iob-cache/: iob-cache.vh  iob_fifo_sync.v  iob_lib.vh  iob_ram_2p.v  iob_ram_sp.v
rtlsim/: CMakeLists.txt  dromajo.cfg  htif.cpp  htif.h  main.cpp  sdcard.cpp  sdcard.h  singleton.h  snapshot.cpp  snapshot.h  soc.cpp  soc.h  tracer.cpp  tracer.h  uart.cpp  uart.h
rtlsim/jtagdpi/: tcp_server.c
scripts/: gen_groom_config.py  openocd.cfg  trace_analyzer.py  xilinx_ip_gen.tcl
syn/ku040/: vivado_project.tcl
syn/ku040/constrs/: ddr4.xdc  fpga.xdc
syn/ku040/src/: soc_top.v
tb/: Makefile  tb_top.py  tb_top.v
tests/riscof-plugin/: riscof_room_rtlsim.py  room_simple_isa.yaml
vroom/: alu.py  consts.py  core.py  dispatch.py  ex_stage.py  fpu.py  fu.py  id_stage.py  if_stage.py  issue.py  lsu.py  perm.py  regfile.py  types.py  utils.py
zsbl/: Makefile  asm.h  linker.ld  main.c  memcpy.S  memset.S  mmio.h  sd.c  sd.h  serial.c  serial.h  start.S  string.c  utils.h  vsprintf.c
(+8 files in other folders)
