[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Jin Xue", email = "csjinxue@outlook.com"},
]
dependencies = [
    "amaranth==0.4.0",
    "riscv-model",
    "amaranth-soc @ git+https://github.com/amaranth-lang/amaranth-soc@59223a8",
    "amaranth-stdio @ git+https://github.com/amaranth-lang/amaranth-stdio",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "GPL"}

[tool.pdm]
[[tool.pdm.source]]
url = "https://pypi.org/simple"
verify_ssl = true
name = "pypi"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[dependency-groups]
dev = [
    "pytest",
    "rich",
    "tinyrv>=0.0.9",
    "distinctipy>=1.3.4",
]
